classDiagram
    class AssignmentType
    class SubmissionType
    class TestResult
    class TestExecution
    class CodeAnalysis
    class HTMLAnalysis
    class IndividualSubmission
    class GroupSubmission
    class Assignment
    class Turma
    class CorrectionReport
    class AssignmentRepository
    class SubmissionRepository
    class AIAnalyzer
    class CorrectionService
    class PromptManager
    class TestExecutor
    class ReportGenerator
    TestExecution --> TestResult : has-a
    Assignment --> SubmissionType : has-a
    Assignment --> AssignmentType : has-a

%% Module: src/domain/models.py
%%   - AssignmentType
%%   - SubmissionType
%%   - TestResult
%%   - TestExecution
%%   - CodeAnalysis
%%   - HTMLAnalysis
%%   - IndividualSubmission
%%   - GroupSubmission
%%   - Assignment
%%   - Turma
%%   - CorrectionReport
%% Module: src/repositories/assignment_repository.py
%%   - AssignmentRepository
%% Module: src/repositories/submission_repository.py
%%   - SubmissionRepository
%% Module: src/services/ai_analyzer.py
%%   - AIAnalyzer
%% Module: src/services/correction_service.py
%%   - CorrectionService
%% Module: src/services/prompt_manager.py
%%   - PromptManager
%% Module: src/services/test_executor.py
%%   - TestExecutor
%% Module: src/utils/report_generator.py
%%   - ReportGenerator